--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <script src='videojs.playlist.js'></script>
     <link href="videojs.playlist.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="css/letsStyle.css" />
+    <link rel="stylesheet" type="text/css" href="letsStyle.css" />
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
     <script src="http://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
 </head>
