--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 
 
     <div class='dropdown'>
-        <button class='dropbtn'>Season 1</button>
+        <button class='dropbtn'>Playlist 1</button>
         <div class='dropdown-content' target='player'>
             <a href='Path_to_your_file Path_to_your_file or http//... .mp4etc' target='iframe_a'><h1>Link 1</h1></a>
             <a href='Path_to_your_file or http//... .mp4etc' target='iframe_a'>
