--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
+<html>
+    <!--Creator: Alexandros Doukas-->
 <head>
     <base target="_parent">
     <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet">
@@ -13,7 +15,7 @@
 <body>
 
 
-
+    <!--Playlist-->
     <div class='dropdown'>
         <button class='dropbtn'>Playlist 1</button>
         <div class='dropdown-content' target='player'>
@@ -21,7 +23,7 @@
             <a href='Path_to_your_file or http//... .mp4etc' target='iframe_a'>
                 <h1>Link 2</h1>
             </a>
-          <!--If you want to add more tracks simply copy the <a></a> part of the code.-->
+          <!--If you want to add more tracks simply copy the <a></a> part of the code and then add your track.-->
         </div>
     </div>
 
@@ -39,3 +41,4 @@
 
     <script src="https://vjs.zencdn.net/7.0.5/video.js"></script>
 </body>
+</html>
