--- a/player.html
+++ b/player.html
@@ -1,3 +1,5 @@
+<html>
+    <!--Creator: Alexandros Doukas-->
 <head>
     <base target="_parent">
     <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet">
@@ -21,3 +23,4 @@
 
     <script src="https://vjs.zencdn.net/7.0.5/video.js"></script>
 </body>
+</html>
